# mlflow-oidc-auth

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .releaserc  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  tox.ini
.github/workflows/: bandit.yml  commit-message-check.yml  documentation.yaml  pr-validate-title.yml  pre-commit.yml  pypi-test.yml  pypi.yml  unit-tests.yml
docs/: README.md  _sidebar.md  development.md  index.html  installation.md
docs/auth/: auth-token-bearer.md  basic-auth.md
docs/configuration/: cashing.md  index.md
docs/configuration/examples/: microsoft.md  okta.md
docs/permission-management/: experiment-permissions.md  index.md  oidc-group-experiment-permissions.md  oidc-group-registered-model-permissions.md  registered-model-permissions.md  user-permissions.md
mlflow_oidc_auth/: __init__.py  app.py  auth.py  client.py  config.py  entities.py  menu.html  permissions.py  routes.py  sqlalchemy_store.py  store.py  string_utils.py  user.py  utils.py  views.py
mlflow_oidc_auth/cache/: filesystemcache.py  rediscache.py
mlflow_oidc_auth/db/: cli.py  models.py  utils.py
mlflow_oidc_auth/db/migrations/: env.py
mlflow_oidc_auth/db/migrations/versions/: 2d5d40dd803f_add_user_groups.py  4ab210836965_add_group_permissions.py  8606fa83a998_initial_migration.py
mlflow_oidc_auth/hack/: menu.html
mlflow_oidc_auth/hooks/: __init__.py  after_request.py  before_request.py
mlflow_oidc_auth/js/: angular.json  package-lock.json  package.json
mlflow_oidc_auth/js/src/app/features/admin-page/: admin-page-routing.module.ts
mlflow_oidc_auth/js/src/app/features/home-page/: home-page-routing.module.ts
mlflow_oidc_auth/js/src/app/shared/components/access-key-modal/: access-key-modal.component.spec.ts
mlflow_oidc_auth/js/src/app/shared/material/: material.module.ts
mlflow_oidc_auth/plugins/group_detection_microsoft_entra_id/: __init__.py
mlflow_oidc_auth/responses/: __init__.py  client_error.py
mlflow_oidc_auth/session/: cachelib.py  redis.py
mlflow_oidc_auth/static/: style.css
mlflow_oidc_auth/templates/: _footer.html  _head.html  _header.html  _popup_add_permissions.html  _popup_manage_permissions.html  _table_w_search.html  _table_w_search_user_details.html  _token_popup.html  admin.html  auth.html  create_user.html  home.html  login.html  permissions.html  permissions_details.html  permissions_user_details.html  profile.html  reset_password.html
mlflow_oidc_auth/tests/: test_auth.py  test_client.py  test_config.py  test_db_utils.py  test_entities.py  test_plugins_group_detecntion_msft_entra_id.py  test_routes.py  test_sqlalchemy_store.py
mlflow_oidc_auth/validators/: __init__.py  _permissions.py  experiment.py  registered_model.py  run.py  user.py
mlflow_oidc_auth/views/: __init__.py  authentication.py  experiment.py  group.py  registered_model.py  ui.py  user.py  user_management.py  views.py
scripts/: docker-compose.yaml  init-dev-env.sh  release.sh  run-dev-server.sh
web-ui/: README.md  angular.json  karma.conf.js  package.json
web-ui/src/: index.html  styles.scss
web-ui/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
web-ui/src/app/core/configs/: api-urls.ts  core.ts  permissions.ts
web-ui/src/app/features/admin-page/: admin-page-routing.module.ts  admin-page.module.ts
web-ui/src/app/features/admin-page/components/: index.ts
web-ui/src/app/features/admin-page/config/: index.ts
web-ui/src/app/features/home-page/: home-page.module.ts
web-ui/src/app/shared/: shared.module.ts
web-ui/src/app/shared/components/: index.ts
web-ui/src/app/shared/components/access-key-modal/: access-key-modal.component.html  access-key-modal.component.ts
web-ui/src/app/shared/components/action-table/: action-table.component.html  action-table.component.spec.ts  action-table.component.ts
web-ui/src/app/shared/components/confirm-modal/: confirm-modal.component.html  confirm-modal.component.ts
web-ui/src/app/shared/components/edit-permissions-modal/: edit-permissions-modal.component.html  edit-permissions-modal.component.ts
web-ui/src/app/shared/components/grant-permissin-modal/: grant-permissin-modal.component.html  grant-permissin-modal.component.spec.ts
web-ui/src/app/shared/components/grant-permissoin-modal/: grant-permission-modal.component.html  grant-permission-modal.component.ts
web-ui/src/app/shared/components/grant-user-permissions/: grant-user-permissions.component.ts
web-ui/src/app/shared/components/header/: header.component.html  header.component.scss  header.component.ts
web-ui/src/app/shared/components/table/: table.component.html  table.component.scss  table.component.spec.ts  table.component.ts  table.config.ts  table.interface.ts
web-ui/src/app/shared/interceptors/: error-handler.interceptor.ts
web-ui/src/app/shared/interfaces/: data.interfaces.ts  experiments-data.interface.ts  groups-data.interface.ts  models-data.interface.ts  permission-data.interface.ts  user-data.interface.ts
web-ui/src/app/shared/material/: material.module.ts
web-ui/src/app/shared/pipes/: table-search.pipe.spec.ts  table-search.pipe.ts
web-ui/src/app/shared/services/: auth.service.ts  data.service.ts  experiments-data.service.spec.ts  experiments-data.service.ts  index.ts  models-data.service.spec.ts  models-data.service.ts  permission-modal.service.ts  snack-bar.service.spec.ts  snack-bar.service.ts  user-data.interface.ts  user-data.service.ts
web-ui/src/app/shared/services/data/: experiments-data.service.ts  group-data.service.ts  models-data.service.ts  permission-data.service.ts  user-data.service.ts
web-ui/src/app/shared/services/specs/: auth.service.spec.ts  experiments-data.service.spec.ts  models-data.service.spec.ts  permission-data.service.spec.ts  permission-modal.service.spec.ts  snack-bar.service.spec.ts  user-data.service.spec.ts
web-ui/src/app/shared/services/utility/: snack-bar.service.ts
web-ui/src/app/shared/unterceptors/: error-handler.interceptor.ts
(+68 files in other folders)
