[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-oidc-auth"
version = "0.0.1.dev0"
description = "OIDC auth plugin for MLflow"
readme = "README.md"
keywords = ["mlflow", "oauth2", "oidc"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
dependencies = [
  "cachelib<1",
  "mlflow>=2.11.1",
  "oauthlib<4",
  "python-dotenv<2",
  "requests<3,>=2.31.0",
  "sqlalchemy<3,>=1.4.0",
  "Flask<4",
  "Flask-Session>=0.7.0",
]

[[project.maintainers]]
name = "Data Platform folks"
email = "noreply@example.com"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://github.com/data-platform-hq/mlflow-oidc-auth"
issues = "https://github.com/data-platform-hq/mlflow-oidc-auth/issues"
documentation = "https://github.com/data-platform-hq/mlflow-oidc-auth/tree/main/docs/"
repository = "https://github.com/data-platform-hq/mlflow-oidc-auth"

[project.entry-points."mlflow.app"]
oidc-auth = "mlflow_oidc_auth.app:app"

[project.entry-points."mlflow_oidc_auth.client"]
basic-auth = "mlflow_oidc_auth.client:AuthServiceClient"

[tool.setuptools.package-data]
mlflow_oidc_auth = ["db/migrations/alembic.ini", "templates/*", "static/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlflow_oidc_auth", "mlflow_oidc_auth.*"]
exclude = ["tests", "tests.*"]


[tool.ruff]
line-length = 100
target-version = "py38"
force-exclude = true
extend-include = ["*.ipynb"]
extend-exclude = [
  "tests/protos",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
  "B006",    # multiple-argument-default
  "B015",    # useless-comparison
  "D209",    # new-line-after-last-paragraph
  "E",       # error
  "F",       # Pyflakes
  "C4",      # flake8-comprehensions
  "I",       # isort
  "PLR0402", # manual-from-import
  "PT001",   # pytest-fixture-incorrect-parentheses-style
  "PT002",   # pytest-fixture-positional-args
  "PT003",   # pytest-extraneous-scope-function
  "PT006",   # pytest-parameterize-names-wrong-type
  "PT007",   # pytest-parameterize-values-wrong-type
  "PT009",   # pytest-unittest-assertion
  "PT010",   # pytest-raises-without-exception
  "PT011",   # pytest-raises-too-broad
  "PT012",   # pytest-raises-with-multiple-statements
  "PT013",   # pytest-incorrect-pytest-import
  "PT014",   # pytest-duplicate-parametrize-test-cases
  "PT018",   # pytest-composite-assertion
  "PT022",   # pytest-useless-yield-fixture
  "PT023",   # pytest-incorrect-mark-parentheses-style
  "PT026",   # pytest-use-fixtures-without-parameters
  "PT027",   # pytest-unittest-raises-assertion
  "RET504",  # unnecessary-assign
  "RUF010",  # explicit-f-string-type-conversion
  "RUF013",  # implicit-optional
  "RUF100",  # unused-noqa
  "S307",    # suspicious-eval-usage
  "S324",    # hashlib-insecure-hash-function
  "SIM101",  # duplicate-isinstance-call
  "SIM103",  # needless-bool
  "SIM108",  # if-else-block-instead-of-if-exp
  "SIM114",  # if-with-same-arms
  "SIM115",  # open-file-with-context-handler
  "SIM210",  # if-expr-with-true-false
  "SIM910",  # dict-get-with-none-default
  "T20",     # flake8-print
  "TID251",  # banned-api
  "TID252",  # relative-improt
  "TRY302",  # useless-try-except
  "UP004",   # useless-object-inheritance
  "UP008",   # super-call-with-parameters
  "UP011",   # lru-cache-without-parameters
  "UP012",   # unecessary-encode-utf8
  "UP015",   # redundant-open-modes
  "UP030",   # format-literals
  "UP031",   # printf-string-format
  "UP032",   # f-string
  "UP034",   # extraneous-parenthesis
  "W",       # warning
]
ignore = [
  # "E402", # module-import-not-at-top-of-file
  "E721", # type-comparison
  "E741", # ambiguous-variable-name
  "F811", # redefined-while-unused
]

[tool.ruff.lint.per-file-ignores]
"docs/*" = ["T20", "RET504", "E501"]
"mlflow/*" = ["PT018"]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false
raises-require-match-for = ["*"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
forced-separate = ["tests"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pkg_resources".msg = "We're migrating away from pkg_resources. Please use importlib.resources or importlib.metadata instead."

[tool.clint]
exclude = [
  "docs",
  "tests/protos",
]
