[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-oidc-auth"
dynamic = ["version"]
description = "OIDC auth plugin for MLflow"
readme = "README.md"
keywords = ["mlflow", "oauth2", "oidc"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
dependencies = [
  "cachelib<1",
  "mlflow<3,>=2.11.1",
  "oauthlib<4",
  "python-dotenv<2",
  "requests<3,>=2.31.0",
  "sqlalchemy<3,>=1.4.0",
  "Flask<4",
  "Flask-Session>=0.7.0",
]

[[project.maintainers]]
name = "Data Platform folks"
email = "noreply@example.com"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://github.com/data-platform-hq/mlflow-oidc-auth"
issues = "https://github.com/data-platform-hq/mlflow-oidc-auth/issues"
documentation = "https://github.com/data-platform-hq/mlflow-oidc-auth/tree/main/docs/"
repository = "https://github.com/data-platform-hq/mlflow-oidc-auth"

[project.entry-points."mlflow.app"]
oidc-auth = "mlflow_oidc_auth.app:app"

[project.entry-points."mlflow_oidc_auth.client"]
basic-auth = "mlflow_oidc_auth.client:AuthServiceClient"

[tool.setuptools.package-data]
mlflow_oidc_auth = [
  "db/migrations/alembic.ini",
  "menu.html",
  "static/*",
  "templates/*",
  "ui/*",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlflow_oidc_auth", "mlflow_oidc_auth.*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.dynamic]
version = {attr = "mlflow_oidc_auth.version"}

[tool.black]
line-length = 128

[project.optional-dependencies]
dev = [
  "black==24.8.0",
  "pre-commit==3.5.0",
]
